--- a/my-project-fetch-api/style.css
+++ b/my-project-fetch-api/style.css
@@ -1,3 +1,19 @@
+body{
+    background-image: url(pokemonbg.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    margin: 0;
+    min-height: 100vh;
+    justify-content: center;
+}
+h1{
+    text-align: centers;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
+    color: white;
+}
 .search{
     padding: 20px;
     display: flex;
@@ -7,8 +23,10 @@
 }
 .search input{
     font-size: 1.5rem;
-    background-color: hsla(0, 0%, 39%, 0.199);
+    background-color: hsla(0, 0%, 39%, 0.959);
     padding-left: 10px;
+    color: white;
+    
 }
 .search button{
     margin-top: 10px;
